macro(add_netstack_test NAME)
  add_executable(test_${NAME} test_${NAME}.cpp)
  target_link_libraries(test_${NAME} stack utils)
  add_test(test_${NAME} test_${NAME})
endmacro()

add_netstack_test(mpool)
add_netstack_test(pktbuf)
add_netstack_test(arpcache)
add_netstack_test(pcapdriver)
target_link_libraries(test_pcapdriver pcap)
add_netstack_test(stat)
add_netstack_test(etherif)
target_link_libraries(test_etherif pcap)
add_netstack_test(routetable)
add_netstack_test(fragtable)
add_netstack_test(ip)
target_link_libraries(test_ip pcap)
add_netstack_test(icmp)
target_link_libraries(test_icmp pcap)
add_netstack_test(netstack)
target_link_libraries(test_netstack pcap)